# QtColorize

./: .gitignore  CMakeLists.txt  QtColorize.json.in  QtColorize.pro  QtColorize_dependencies.pri  QtColorize_local_paths.pri.example  README.md  Resources.qrc
.github/workflows/: build.yaml
src/: qtcolorizeconstants.h  qtcolorizecore.cpp  qtcolorizecore.h  qtcolorizecoreoptionspage.cpp  qtcolorizecoreoptionspage.h  qtcolorizecoreoptionswidget.cpp  qtcolorizecoreoptionswidget.h  qtcolorizecoreoptionswidget.ui  qtcolorizecoresettings.cpp  qtcolorizecoresettings.h  qtcolorizefuture.cpp  qtcolorizefuture.h  qtcolorizelog.h  qtcolorizeplugin.cpp  qtcolorizeplugin.h  qtcolorizerowtype.h  qtcolorizeutils.cpp  qtcolorizeutils.h  src.pri
src/parsers/: asmparser.cpp  asmparser.h  baseparser.cpp  baseparser.h  bashparser.cpp  bashparser.h  cppparser.cpp  cppparser.h  gitignoreparser.cpp  gitignoreparser.h  makefileparser.cpp  makefileparser.h  manifestparser.cpp  manifestparser.h  markdownparser.cpp  markdownparser.h  phpparser.cpp  phpparser.h  proparser.cpp  proparser.h  qrcparser.cpp  qrcparser.h  sqlparser.cpp  sqlparser.h  tsparser.cpp  tsparser.h  virtualboxparser.cpp  virtualboxparser.h  xmlparser.cpp  xmlparser.h
translation/: QtColorize_en_US.ts  QtColorize_ru.ts
util/ci/: config.py
